--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,39 @@
 plugins {
     id 'java'
+    id 'application'
 }
 
 group = 'com.uca'
 version = '1.0-SNAPSHOT'
 
+application {
+    mainClass = 'Start'
+}
+
 repositories {
     mavenCentral()
 }
 
-dependencies {
-    testImplementation platform('org.junit:junit-bom:5.9.1')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
+jar {
+    manifest {
+        attributes(
+                'Implementation-Title': 'Gradle Quickstart',
+                'Implementation-Version': '1.0.0',
+                'Main-Class': 'com.uca.Start'
+        )
+    }
 }
 
-test {
-    useJUnitPlatform()
+sourceSets {
+    main {
+        java {
+            srcDirs = ['src/main/java']
+        }
+    }
+
+    test {
+        java {
+            srcDirs = ['src/test/java']
+        }
+    }
 }
