--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,16 @@ repositories {
     mavenCentral()
 }
 
+dependencies {
+    testImplementation 'org.hamcrest:hamcrest:2.2'
+    testImplementation platform('org.junit:junit-bom:5.9.1')
+    testImplementation 'org.junit.jupiter:junit-jupiter'
+}
+
+test {
+    useJUnitPlatform()
+}
+
 jar {
     manifest {
         attributes(
